[package]
name = "dungeon_crawler"
version = "0.1.0"
edition = "2018"
authors = ["Artur Wyszyński <artur.wyszynski@wildpixelgames.com>"]
description = "Dungon Crawler"
readme = "README.md"
repository = "https://github.com/aljen/dungeon_crawler"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bracket-lib = "~0.8.1"
legion = "=0.4.0"

